Add title to visual/visual_base.html.

--- a/collab_canvas/templates/visual/visual_base.html
+++ b/collab_canvas/templates/visual/visual_base.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static i18n compress%}
 
+{% block title %}Visual Collab Canvas{% endblock title %}
 
 {% block sketch %}
   <script src={% static 'js/p5.min.js' %}></script>
