Simple websocket elements to test in js/project.js and base.html

--- a/collab_canvas/templates/base.html
+++ b/collab_canvas/templates/base.html
@@ -107,7 +107,7 @@
       <!-- place project specific Javascript in this file -->
       {% compress js %}
       <!--<script src="libraries/socket.io-client/dist/socket.io.js" type="text/javascript"></script>-->
-      <!-- <script src="{% static 'js/project.js' %}"></script> -->
+      <script src="{% static 'js/project.js' %}"></script>
       {% block sketch %}
 
       {% endblock sketch %}
